apply plugin: 'com.android.application'

android {
    compileSdkVersion 27
    defaultConfig {
        applicationId "com.dentalclinic.capstone"
        minSdkVersion 24
        targetSdkVersion 27
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        multiDexEnabled true

    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'com.android.support:appcompat-v7:27.1.1'
    implementation "com.android.support:exifinterface:27.1.1"
    implementation 'com.android.support:design:27.1.1'
    implementation "com.android.support:cardview-v7:27.1.1"
    implementation 'com.android.support:support-v4:27.1.1'
    implementation 'com.android.support:design:27.1.1'
    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
    implementation 'de.hdodenhof:circleimageview:2.2.0'
    implementation 'com.github.RupinSahu:CardDrawer:-SNAPSHOT'
    /////////api lib
    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
    implementation 'com.squareup.picasso:picasso:2.71828'
    //Firebase
    implementation 'com.google.firebase:firebase-database:16.0.1'
    implementation 'com.google.firebase:firebase-auth:16.0.2'
    implementation 'com.google.firebase:firebase-messaging:17.0.0'
    implementation "com.google.android.gms:play-services-gcm:15.0.1"

    //paypal
    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
    //converst money
//    implementation 'com.github.Ritaja:java-exchange-rates:1.0'

    implementation 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
    implementation 'com.muddzdev:styleabletoast:2.1.2'

    implementation project(':library')
    implementation 'com.mikepenz:crossfader:1.5.2'
    implementation "com.mikepenz:itemanimators:1.0.2@aar"
    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
    implementation group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.4'
    implementation group: 'com.android.volley', name: 'volley', version: '1.1.0'

    implementation 'com.muddzdev:styleabletoast:2.1.2'
    // RxJava
    // RxAndroid
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
    ////////apilib
    implementation 'com.android.support:recyclerview-v7:27.1.1'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
}
apply plugin: 'com.google.gms.google-services'
